@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.1:
+*07/11/04:
+   * Update autoraise delay on reconfigure (Mark)
+     Window.cc
 *07/10/31:
    * Move fullscreen windows to normal layer when they lose focus (Mark)
      Window.cc FocusControl.cc
